[project]
name = "king"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "google-cloud-storage>=3.6.0",
    "google-genai>=1.52.0",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
